Bug 257724 - Selected messages are always marked as read
Summary: Selected messages are always marked as read
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-23 19:09 UTC by Michi
Modified: 2010-12-12 13:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michi 2010-11-23 19:09:53 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Although I have disabled Settings -> Misc -> Folders -> Mark selected messages as read after, messages are being marked nonetheless. This has started with version 4.5.77.svn1198704.

Reproducible: Always
Comment 1 Tobias Koenig 2010-12-12 13:27:06 UTC
SVN commit 1205752 by tokoe:

Do not mark messages as read if 'Mark message as read after' option
has been unchecked.

BUG: 257724


 M  +4 -5      markmessagereadhandler.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205752