Do not mark messages as read if 'Mark message as read after' option has been unchecked.

BUG: 257724

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1205752